--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:windowSoftInputMode="stateHidden|adjustPan"
             android:theme="@style/Login"/>
 
+        <activity android:name=".Views.View_Venda"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+
     </application>
 
 </manifest>
