--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-rc01'
     implementation 'com.android.support:gridlayout-v7:28.0.0-rc01'
     implementation 'com.android.support:cardview-v7:28.0.0-rc01'
+
+    implementation('com.alibaba.android:ultraviewpager:1.0.7.7@aar') { transitive = true   }
 }
