--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "br.com.espe.controlxfood"
+        applicationId "br.com.espe.controlxfood_aplicativo"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
@@ -31,4 +31,14 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-rc01'
 
     implementation('com.alibaba.android:ultraviewpager:1.0.7.7@aar') { transitive = true   }
+
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+
 }
+apply plugin: 'com.google.gms.google-services'
