--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.espe.controlxfood">
+    package="br.com.espe.controlxfood_aplicativo">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -18,7 +18,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/controlx_logo_ic"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".FireBase.FireApp">
 
         <activity
             android:name=".Splash"
