--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:28.0.0-rc01'
     implementation 'com.android.support:cardview-v7:28.0.0-rc01'
 
+    implementation 'com.amitshekhar.android:android-networking:1.0.1'
+
     implementation('com.alibaba.android:ultraviewpager:1.0.7.7@aar') { transitive = true   }
 
     implementation 'com.google.firebase:firebase-core:16.0.1'
@@ -44,6 +46,9 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+
+    implementation 'com.airbnb.android:lottie:2.5.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
