--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/Login"/>
 
+        <activity android:name=".Views.View_NovoUsuario"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/Login"/>
+
     </application>
 
 </manifest>
