--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/Login"/>
 
+        <activity android:name=".Views.View_CodeSMS"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/CodeSMS"/>
+
     </application>
 
 </manifest>
